--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
   <p> Emily's Page </p>
   <p> Hello! You've unfortunately made it to my page... </p>
+  <p> now I'm trying to make it look cool </p>
 </body>
 </html>
