--- a/scratch.html
+++ b/scratch.html
@@ -9,6 +9,6 @@
 <body>
   <p> Emily's Page </p>
   <p> Hello! You've unfortunately made it to my page... </p>
-  <p> now I'm trying to make it look cool </p>
+  <p> now I've hopefully made it look cool </p>
 </body>
 </html>
